--- a/lezione3.ipynb
+++ b/lezione3.ipynb
@@ -4,14 +4,70 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Altri tipi di dati!"
+    "## Matrici fatte con le liste"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creazione di una matrice 3x3 utilizzando liste\n",
+    "matrice = [\n",
+    "    [1, 2, 3],\n",
+    "    [4, 5, 6],\n",
+    "    [7, 8, 9]\n",
+    "]\n",
+    "\n",
+    "# Accesso a un elemento della matrice (ad esempio, elemento nella seconda riga e terza colonna)\n",
+    "elemento = matrice[1][2]\n",
+    "print(\"Elemento nella seconda riga e terza colonna:\", elemento)\n",
+    "\n",
+    "# Stampa della matrice\n",
+    "for riga in matrice:\n",
+    "    print(riga)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Matrici fatte con le liste"
+    "## Esempio di For loops"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## While loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fibonacci series up to 1000   \n",
+    "a, b = 0, 1\n",
+    "while a < 1000:\n",
+    "    print(a, end=',')\n",
+    "    a, b = b, a+b"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Problema: Cicli While"
    ]
   },
   {
@@ -165,34 +221,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# While loops"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Problema: Cicli While"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Più tipi di dati dati!"
    ]
   },
@@ -208,7 +236,90 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "tel = {'jack': 4098, 'sape': 4139}\n",
+    "tel['guido'] = 4127\n",
+    "print (tel)\n",
+    "\n",
+    "print (tel['jack'])\n",
+    "\n",
+    "del tel['sape'] # \"del\" is used to REMOVE elements \n",
+    "tel['irv'] = 4127\n",
+    "print (tel)\n",
+    "print()\n",
+    "\n",
+    "a=list(tel)\n",
+    "print(a)\n",
+    "\n",
+    "b=sorted(tel)\n",
+    "print(b)\n",
+    "print()\n",
+    "\n",
+    "print(tel.keys())\n",
+    "print(tel.values())\n",
+    "print(tel.items())\n",
+    "print()\n",
+    "\n",
+    "p='guido' in tel\n",
+    "print(p)\n",
+    "l='jack' not in tel\n",
+    "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dict([('sape', 4139), ('guido', 4127), ('jack', 4098)])\n",
+    "dict(sape=655, guido=767, jack=433) # only if the keys are simple strings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "{x: x**2 for x in (2, 4, 6)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "knights = {'gallahad': 'the pure', 'robin': 'the brave'}\n",
+    "for k, v in knights.items():\n",
+    "    print(k, v)\n",
+    "\n",
+    "for i, v in enumerate(['tic', 'tac', 'toe']):\n",
+    "    print(i, v)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What is your name?  It is lancelot.\n",
+      "What is your quest?  It is the holy grail.\n",
+      "What is your favorite color?  It is blue.\n"
+     ]
+    }
+   ],
+   "source": [
+    "questions = ['name', 'quest', 'favorite color']\n",
+    "answers = ['lancelot', 'the holy grail', 'blue']\n",
+    "for q, a in zip(questions, answers):\n",
+    "    print('What is your {0}?  It is {1}.'.format(q, a))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -222,7 +333,60 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "t = 12345, 54321, 'hello!'\n",
+    "t[0]\n",
+    "\n",
+    "print(t)\n",
+    "\n",
+    "# Tuples may be nested:\n",
+    "u = t, (1, 2, 3, 4, 5)\n",
+    "print(u)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# they can contain mutable objects:\n",
+    "v = ([1, 2, 3], [3, 2, 1])\n",
+    "print(v)\n",
+    "\n",
+    "\n",
+    "# Tuples are immutable:\n",
+    "# t[0] = 88888 is not allowed!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "('hello',)"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "empty = ()\n",
+    "singleton = 'hello',    # <-- note trailing comma\n",
+    "print(len(empty))\n",
+    "\n",
+    "print(len(singleton))\n",
+    "\n",
+    "singleton"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -233,10 +397,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a', 'b', 'c', 'd', 'r'}"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Demonstrate set operations on unique letters from two words\n",
+    "\n",
+    "a = set('abracadabra')\n",
+    "b = set('alacazam')\n",
+    "a                                  # unique letters in a\n",
+    "\n",
+    "# a - b                              # letters in a but not in b\n",
+    "\n",
+    "# a | b                              # letters in a or b or both\n",
+    "\n",
+    "# a & b                              # letters in both a and b\n",
+    "\n",
+    "# a ^ b                              # letters in a or b but not both"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -251,13 +440,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Qualche esempio..."
-   ]
   },
   {
    "cell_type": "code",
