Updated with more lessons

--- a/lezione3.ipynb
+++ b/lezione3.ipynb
@@ -13,11 +13,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "matrice = [[1, 2, 3], [4, 5, 6], [7, 8, 9]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Elemento nella seconda riga e terza colonna: 6\n",
+      "[1, 2, 3]\n",
+      "[4, 5, 6]\n",
+      "[7, 8, 9]\n"
+     ]
+    }
+   ],
+   "source": [
     "# Creazione di una matrice 3x3 utilizzando liste\n",
     "matrice = [\n",
     "    [1, 2, 3],\n",
     "    [4, 5, 6],\n",
-    "    [7, 8, 9]\n",
+    "    [7, 8, 9],\n",
+    "    [3, 4, 6]\n",
     "]\n",
     "\n",
     "# Accesso a un elemento della matrice (ad esempio, elemento nella seconda riga e terza colonna)\n",
@@ -25,7 +46,7 @@
     "print(\"Elemento nella seconda riga e terza colonna:\", elemento)\n",
     "\n",
     "# Stampa della matrice\n",
-    "for riga in matrice:\n",
+    "for riga in matrice[:-1]:\n",
     "    print(riga)"
    ]
   },
@@ -38,10 +59,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ho trovato: mela\n",
+      "Ho trovato: banana\n",
+      "Ho trovato: ciliegia\n",
+      "Questo è il numero: 1\n",
+      "Questo è il numero: 3\n",
+      "Questo è il numero: 5\n",
+      "Questo è il numero: 7\n",
+      "Questo è il numero: 9\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Esempio di for loop su una lista di stringhe\n",
+    "frutti = [\"mela\", \"banana\", \"ciliegia\"]\n",
+    "for frutto in frutti:\n",
+    "    print(\"Ho trovato:\", frutto)\n",
+    "\n",
+    "# Esempio di for loop con range\n",
+    "for numero in range(1, 10, 2):\n",
+    "    print(\"Questo è il numero:\", numero)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lista = range(1, 10, 2)\n",
+    "lista[2]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -60,22 +126,53 @@
     "a, b = 0, 1\n",
     "while a < 1000:\n",
     "    print(a, end=',')\n",
-    "    a, b = b, a+b"
+    "    a, b = b, a+b\n",
+    "    c = a\n",
+    "    a = b\n",
+    "    b = c+b"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Problema: Cicli While"
+    "**Quando usare i For e quando i While**\n",
+    "- I cicli for vengono principalmente utilizzati per iterare un numero conosciuto di volte, il che è comune quando si elaborano collezioni di dati con un numero specifico di elementi.\n",
+    "- I cicli while vengono comunemente utilizzati per iterare un numero sconosciuto di volte, il che è utile quando il numero di iterazioni dipende da una condizione data."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "## Problema: Cicli While\n",
+    "\n",
+    "**Consegna: Simulazione di un Termometro Elettronico**\n",
+    "\n",
+    "**Obiettivo**\n",
+    "Creare un programma che simuli il funzionamento di un termometro elettronico che registra temperature corporee multiple fino a quando l'utente decide di terminare le misurazioni.\n",
+    "\n",
+    "**Scenario**\n",
+    "Un termometro elettronico moderno può effettuare misurazioni in sequenza e memorizzarle. In questa simulazione semplificata, immagina che il termometro continui a registrare temperature fino a quando l'utente preme un pulsante di stop che, nel nostro modello, è rappresentato dall'inserimento di un valore negativo (come ad esempio -1).\n",
+    "\n",
+    "**Requisiti**\n",
+    "1. Implementare un ciclo `while` che continui a chiedere all'utente di inserire valori di temperatura corporea (numeri con decimali) fino a quando non viene inserito un valore negativo.\n",
+    "2. Memorizzare tutti i valori di temperatura validi (positivi) in una lista.\n",
+    "3. Quando l'utente \"preme il pulsante\" (inserisce un valore negativo):\n",
+    "   - Mostrare il numero totale di misurazioni effettuate\n",
+    "   - Calcolare e visualizzare la temperatura media\n",
+    "   - Effettuare una valutazione: se la media è superiore a 37.5°C, mostrare \"Febbre Alta!\", altrimenti \"Temperatura nella norma.\"\n",
+    "4. Gestire anche il caso in cui non venga inserita alcuna temperatura.\n",
+    "\n",
+    "**Suggerimenti**\n",
+    "- Utilizza un ciclo `while True` con una condizione di `break` quando viene inserito un valore negativo\n",
+    "- La funzione `input()` combinata con `float()` permette di acquisire temperature con decimali\n",
+    "- Ricordati di controllare se la lista delle temperature è vuota prima di calcolare la media\n",
+    "- Per calcolare la media puoi utilizzare la funzione `sum()` diviso per il numero di elementi\n",
+    "\n",
+    "Questo esercizio modella in modo semplicistico un termometro elettronico che smette di misurare quando si preme un bottone, simulato nel nostro programma dall'invio di un segnale negativo."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -86,7 +183,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def print_string_ciao(input_str):\n",
+    "    \"\"\"stampa la stringa + ciao\"\"\"\n",
+    "    output = input_str + \" ciao\"\n",
+    "    return output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'banana ciao'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print_string_ciao(\"banana\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,10 +225,45 @@
     "    while a < n:\n",
     "        print(a, end=' ')\n",
     "        a, b = b, a+b\n",
-    "    print()\n",
-    "\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1 1 2 3 5 8 13 21 34 55 89 144 233 377 610 987 1597 \n"
+     ]
+    }
+   ],
+   "source": [
     "# Now call the function we just defined:\n",
     "fib(2000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.fib(n)>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fib"
    ]
   },
   {
@@ -108,11 +272,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fib\n",
-    "\n",
     "f = fib\n",
-    "f(100)\n",
-    "\n",
+    "f(100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
     "# Le funzioni possono non restituire nulla:\n",
     "fib(0)\n",
     "print(fib(0))"
@@ -143,7 +322,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def ask_ok(prompt, retries=4, reminder='Please try again!'):\n",
+    "def ask_ok(prompt, error_message, retries=4, reminder='Please try again!'):\n",
     "    while True:\n",
     "        reply = input(prompt)\n",
     "        if reply in {'y', 'ye', 'yes'}: \n",
@@ -154,7 +333,9 @@
     "        retries = retries - 1\n",
     "        if retries < 0:\n",
     "            raise ValueError('invalid user response')\n",
-    "        print(reminder)"
+    "        print(reminder)\n",
+    "\n",
+    "ask_ok(\"prompt\", reminder=\"Attento oh!\")"
    ]
   },
   {
@@ -165,19 +346,56 @@
    "source": [
     "def f(a, L=[]):\n",
     "    L.append(a)\n",
-    "    return L\n",
-    "\n",
-    "print(f(1))\n",
-    "print(f(2))\n",
-    "print(f(3))\n",
-    "\n",
+    "    return L"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f(1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f(2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f(3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# If you don’t want the default to be shared between subsequent calls, you can write the function like this instead:\n",
     "def f(a, L=None):\n",
     "    if L is None:\n",
     "        L = []\n",
     "    L.append(a)\n",
-    "    return L\n",
-    "\n",
+    "    return L"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "print(f(1))\n",
     "print(f(2))\n",
     "print(f(3))"
@@ -207,15 +425,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Problema: Matrici e Funzioni"
+    "## Problema: Matrici e Funzioni\n",
+    "\n",
+    "**Obiettivo**\n",
+    "Creare un programma che permetta di visualizzare in modo ordinato e leggibile matrici bidimensionali con valori di lunghezze diverse.\n",
+    "\n",
+    "**Descrizione**\n",
+    "Quando si stampano matrici contenenti numeri di lunghezze diverse, l'output risulta disallineato e difficile da leggere. Il tuo compito è implementare un sistema che visualizzi matrici con elementi perfettamente allineati in colonne.\n",
+    "\n",
+    "**Requisiti:**\n",
+    "1. Implementare una funzione `r_just(element, max_len)` che allinei a destra un elemento all'interno di uno spazio di lunghezza specificata\n",
+    "2. Implementare una funzione `print_matrix_2D(matrix)` che:\n",
+    "   - Calcoli la larghezza massima necessaria per qualsiasi elemento nella matrice\n",
+    "   - Utilizzi la funzione `r_just` per allineare ogni elemento\n",
+    "   - Formatti l'output con barre verticali all'inizio e alla fine di ogni riga e virgole tra gli elementi\n",
+    "\n",
+    "**Esempio di Input:**\n",
+    "```python\n",
+    "matrix = [[1, 222, 33333],\n",
+    "          [4, 5, 6]]\n",
+    "```\n",
+    "\n",
+    "**Output Atteso:**\n",
+    "```\n",
+    "|    1,   222, 33333 |\n",
+    "|    4,     5,     6 |\n",
+    "```\n",
+    "\n",
+    "**Suggerimenti:**\n",
+    "- Utilizza la funzione `len(str(element))` per calcolare la lunghezza di un elemento convertito in stringa\n",
+    "- Ricorda che l'allineamento a destra si ottiene aggiungendo spazi all'inizio della stringa"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
