Add examples for 'else' and 'finally' in error handling section

--- a/lezione5.ipynb
+++ b/lezione5.ipynb
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "id": "0f510b09",
    "metadata": {},
    "outputs": [],
@@ -564,6 +564,160 @@
     "```\n",
     "\n",
     "Note that if you’re handling specific exceptions as you did above, then the order of the except clauses doesn’t matter too much. It’s all about which of the exceptions Python raises first. As soon as Python raises an exception, it checks the except clauses from top to bottom and executes the first matching one that it finds."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a10b1eaa",
+   "metadata": {},
+   "source": [
+    "### Else & Finally\n",
+    "![taken from: https://realpython.com/python-exceptions/](try_except_else_finally.a7fac6c36c55.avif)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "c04b67fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Function can only run on Linux systems.\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    linux_interaction()\n",
+    "except RuntimeError as error:\n",
+    "    print(error)\n",
+    "else:\n",
+    "    print(\"Doing even more Linux things.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "81dc4930",
+   "metadata": {},
+   "source": [
+    "è diverso da"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "b27ebc98",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Function can only run on Linux systems.\n",
+      "Doing even more Linux things.\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    linux_interaction()\n",
+    "except RuntimeError as error:\n",
+    "    print(error)\n",
+    "print(\"Doing even more Linux things.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1337369d",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "0cc396e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Function can only run on Linux systems.\n",
+      "Cleaning up, irrespective of any exceptions.\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    linux_interaction()\n",
+    "except RuntimeError as error:\n",
+    "    print(error)\n",
+    "else:\n",
+    "    try:\n",
+    "        with open(\"file.log\") as file:\n",
+    "            read_data = file.read()\n",
+    "    except FileNotFoundError as fnf_error:\n",
+    "        print(fnf_error)\n",
+    "finally:\n",
+    "    print(\"Cleaning up, irrespective of any exceptions.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "74e903b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cleaning up, irrespective of any exceptions.\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "Function can only run on Linux systems.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mRuntimeError\u001b[39m                              Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[25]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# ...\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m     \u001b[43mlinux_interaction\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[32m      6\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mCleaning up, irrespective of any exceptions.\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[24]\u001b[39m\u001b[32m, line 4\u001b[39m, in \u001b[36mlinux_interaction\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msys\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[33m\"\u001b[39m\u001b[33mwindows\u001b[39m\u001b[33m\"\u001b[39m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m sys.platform:\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33mFunction can only run on Linux systems.\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m      5\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mDoing Linux things.\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mRuntimeError\u001b[39m: Function can only run on Linux systems."
+     ]
+    }
+   ],
+   "source": [
+    "# ...\n",
+    "\n",
+    "try:\n",
+    "    linux_interaction()\n",
+    "finally:\n",
+    "    print(\"Cleaning up, irrespective of any exceptions.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b0613b2",
+   "metadata": {},
+   "source": [
+    "Despite the fact that Python raised the RuntimeError, the code in the finally clause still executed and printed the message to your console.\n",
+    "\n",
+    "This can be helpful because even code outside of a try… except block won’t necessarily execute if your script encounters an unhandled exception. In that case, your program will terminate and the code after the try … except block will never run. However, Python will still execute the code inside of the finally clause. This helps you make sure that resources like file handles and database connections are cleaned up properly."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d07d94d",
+   "metadata": {},
+   "source": [
+    "# References:\n",
+    "- Python Crash Course, 2nd Edition: A Hands-On, Project-Based Introduction to Programming - Eric Matthes\n",
+    "- https://realpython.com/python-exceptions/"
    ]
   }
  ],
