Add section on Inheritance in lesson 5

--- a/lezione5.ipynb
+++ b/lezione5.ipynb
@@ -154,6 +154,24 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e7161868",
+   "metadata": {},
+   "source": [
+    "## Inheritance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79c0f4ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "75d9c02d",
    "metadata": {},
    "source": [
