Add section for modifications by Andrea

--- a/lezione5.ipynb
+++ b/lezione5.ipynb
@@ -180,6 +180,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "066b5089",
+   "metadata": {},
+   "source": [
+    "Modifica Andrea"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5169a161",
    "metadata": {},
    "source": [
