Update Inheritance section title for clarity

--- a/lezione5.ipynb
+++ b/lezione5.ipynb
@@ -157,7 +157,7 @@
    "id": "e7161868",
    "metadata": {},
    "source": [
-    "## Inheritance 8==D"
+    "## Inheritance 8==D ddd"
    ]
   },
   {
