Add file handling section to lezione5.ipynb and create data.txt
- Introduced a comprehensive explanation of file handling concepts including file structure, paths, line endings, and character encodings in the lezione5.ipynb notebook.
- Added code examples for reading from and writing to files.
- Created a new data.txt file for demonstration purposes.
- Updated references section with additional resources on file handling in Python.
- Added a new SVG diagram for exception handling visualization.

--- a/lezione5.ipynb
+++ b/lezione5.ipynb
@@ -191,7 +191,98 @@
    "id": "5169a161",
    "metadata": {},
    "source": [
-    "## File Handling"
+    "## File Handling\n",
+    "\n",
+    "**Cos’è un file**  \n",
+    "Un file è semplicemente una sequenza contigua di byte che memorizza dati in un formato prestabilito. Può trattarsi di un testo semplice (es. .txt) oppure di un eseguibile complesso. In ogni caso, a livello fisico i byte vengono rappresentati in binario (1 e 0) per essere elaborati dal computer.\n",
+    "\n",
+    "**Struttura di un file**  \n",
+    "1. **Header**: contiene i metadati (nome, dimensione, tipo, ecc.).  \n",
+    "2. **Dati**: il contenuto vero e proprio scritto dall’autore o dall’editor.  \n",
+    "3. **EOF (End Of File)**: un carattere speciale che segnala la fine del file.\n",
+    "\n",
+    "**Formato e estensione**  \n",
+    "– Il significato dei byte dipende dalla specifica del formato, identificata dall’estensione (es. `.gif` per Graphics Interchange Format).  \n",
+    "– Di solito si incontrano centinaia di estensioni, ma per i nostri scopi ci limiteremo a `.txt` e `.csv`.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "**Percorsi di file (file paths)**  \n",
+    "Per aprire un file serve il percorso, una stringa che identifica la sua posizione nel file system, composta da:  \n",
+    "1. **Cartella**: la gerarchia di directory separate da `/` (Unix) o `\\` (Windows).  \n",
+    "2. **Nome del file**: es. `cats`.  \n",
+    "3. **Estensione**: preceduta da un punto, es. `.gif`.\n",
+    "\n",
+    "> **Esempio**  \n",
+    "> Struttura:  \n",
+    "> ```\n",
+    "> /\n",
+    "> ├── path/\n",
+    "> │   ├── to/\n",
+    "> │   │   └── cats.gif\n",
+    "> │   └── dog_breeds.txt\n",
+    "> └── animals.csv\n",
+    "> ```  \n",
+    "> - Se la cwd è la cartella che contiene `path`, il percorso completo per `cats.gif` è `path/to/cats.gif`.  \n",
+    "> - Se la cwd è `path/to/`, basta `cats.gif`.  \n",
+    "> - Per salire di una cartella si usa `..`: da `path/to/`, `../dog_breeds.txt` apre `path/dog_breeds.txt`.  \n",
+    "> - Si possono concatenare più `..`, ad esempio `../../animals.csv`.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "**Terminatori di riga (line endings)**  \n",
+    "– Il “ritorno a capo” ha origine nelle telegrafie ed è stato standardizzato da ISO e ASA.  \n",
+    "  - ASA richiede sequenza Carriage Return + Line Feed (CR+LF, `\\r\\n`).  \n",
+    "  - ISO ammette anche solo Line Feed (LF, `\\n`).  \n",
+    "– Windows usa `\\r\\n`; Unix e macOS moderni usano solo `\\n`.  \n",
+    "– Un file con terminatori Windows letto su Unix mostra righe spezzate (`Pug\\r` e poi `\\n`), perciò è necessario gestire entrambe le varianti quando si itera per linea.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "**Codifiche dei caratteri (character encodings)**  \n",
+    "– La codifica trasforma byte in caratteri. Le due più comuni sono:  \n",
+    "  1. **ASCII**: 128 caratteri (subset di Unicode).  \n",
+    "  2. **Unicode (UTF-8)**: fino a 1.114.112 caratteri.  \n",
+    "– Usare la codifica sbagliata (es. ASCII su file UTF-8 con caratteri speciali) causa errori o caratteri errati."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e9c3fd80",
+   "metadata": {},
+   "source": [
+    "Per leggere i dati"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "635e35c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('data.txt', 'r') as f:\n",
+    "    data = f.read()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "361baa36",
+   "metadata": {},
+   "source": [
+    "Per scrivere sul file:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31fa302a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('data.txt', 'w') as f:\n",
+    "    data = 'some data to be written to the file'\n",
+    "    f.write(data)"
    ]
   },
   {
@@ -598,7 +689,7 @@
    "metadata": {},
    "source": [
     "### Else & Finally\n",
-    "![taken from: https://realpython.com/python-exceptions/](try_except_else_finally.a7fac6c36c55.avif)\n"
+    "![](try_except_else_finally.excalidraw.svg)\n"
    ]
   },
   {
@@ -743,7 +834,9 @@
    "source": [
     "# References:\n",
     "- Python Crash Course, 2nd Edition: A Hands-On, Project-Based Introduction to Programming - Eric Matthes\n",
-    "- https://realpython.com/python-exceptions/"
+    "- https://realpython.com/python-exceptions/\n",
+    "- https://realpython.com/read-write-files-python/\n",
+    "- https://realpython.com/working-with-files-in-python/"
    ]
   }
  ],
